Reader: Fix text clipping
In .is-same-site and .is-other-site.

--- a/client/blocks/reader-related-card-v2/style.scss
+++ b/client/blocks/reader-related-card-v2/style.scss
@@ -249,7 +249,7 @@ $reader-related-card-v2-breakpoint-small: "( max-width: 535px )";
 		.has-thumbnail {
 
 			.reader-related-card-v2__post {
-				max-height: 205px;
+				max-height: 211px;
 
 				@include breakpoint( "<960px" ) {
 					max-height: 240px;
@@ -299,7 +299,7 @@ $reader-related-card-v2-breakpoint-small: "( max-width: 535px )";
 			}
 
 			.reader-related-card-v2__post {
-				max-height: 205px;
+				max-height: 211px;
 
 				@media #{$reader-related-card-v2-breakpoint-medium} {
 					max-height: 150px;
